tests/fail/fork-env-mut-capture.stderr
error[E0594]: cannot assign to `x`, as it is a captured variable in a `Fn` closure
  --> tests/fail/fork-env-mut-capture.rs:16:9
   |
13 |     let mut x = 0;
   |         ----- `x` declared here, outside the closure
14 |
15 |     let status = fork(fork_id!(), "env_mut_capture", || {
   |                                                      -- in this closure
16 |         x += 1;
   |         ^^^^^^ cannot assign
